crates/languages/bevy_mod_scripting_lua_derive/tests/fail/simple/invalid-argument-type.stderr
error[E0308]: mismatched types
  --> tests/fail/simple/invalid-argument-type.rs:4:10
   |
4  | #[derive(LuaProxy, Reflect, Clone)]
   |          ^^^^^^^^
   |          |
   |          expected `usize`, found `String`
   |          arguments to this function are incorrect
   |
note: method defined here
  --> tests/fail/simple/invalid-argument-type.rs:14:12
   |
14 |     pub fn my_fn(&self, _: usize) {}
   |            ^^^^^        --------
   = note: this error originates in the derive macro `LuaProxy` (in Nightly builds, run with -Z macro-backtrace for more info)
